Image editor does not update when you add additional UDIM tiles #96116

Closed
opened 2022-03-02 03:16:57 +01:00 by Jesse Yurkovich · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-03-01 23:58, hash: 4932269ec3
Worked: version: 3.1.0 Beta, branch: master, commit date: 2022-02-07 22:08, hash: 229d0ace02 (not the last working build; just the one I had on hand)

Short description of error
Adding new UDIM tiles won't immediately show them in the Image editor until you force the view to refresh (zoom/pan/etc.).

This is similar to other issues recently but this one isn't fixed yet on newest 3.1 build.

Exact steps for others to reproduce the error

  • Open the image editor
  • Create a new "Tiled" image
  • Open up the side panel and add new tiles (see below)
  • New tiles are added with empty/transparent background

Potential patch -- I'm unsure about the placement of the call as most other uses of this API don't happen in operator exec functions...

diff --git a/source/blender/editors/space_image/image_ops.c b/source/blender/editors/space_image/image_ops.c
index aed4a2ccabd..34fd9120674 100644
--- a/source/blender/editors/space_image/image_ops.c
+++ b/source/blender/editors/space_image/image_ops.c
@@ -3950,10 +3950,11 @@ static int tile_add_exec(bContext *C, wmOperator *op)
     return OPERATOR_CANCELLED;
   }

   ima->active_tile_index = BLI_findindex(&ima->tiles, last_tile_created);

+  BKE_image_partial_update_mark_full_update(ima);
   WM_event_add_notifier(C, NC_IMAGE | ND_DRAW, NULL);
   return OPERATOR_FINISHED;
 }

 static int tile_add_invoke(bContext *C, wmOperator *op, const wmEvent *UNUSED(event))

step1.png

step2.png

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.14831 Core Profile Context FireGL 21.Q2.1 27.20.21026.2006 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-03-01 23:58, hash: `4932269ec3` Worked: version: 3.1.0 Beta, branch: master, commit date: 2022-02-07 22:08, hash: `229d0ace02` (not the last working build; just the one I had on hand) **Short description of error** Adding new UDIM tiles won't immediately show them in the Image editor until you force the view to refresh (zoom/pan/etc.). This is similar to other issues recently but this one isn't fixed yet on newest 3.1 build. **Exact steps for others to reproduce the error** - Open the image editor - Create a new "Tiled" image - Open up the side panel and add new tiles (see below) - New tiles are added with empty/transparent background Potential patch -- I'm unsure about the placement of the call as most other uses of this API don't happen in operator exec functions... ``` diff --git a/source/blender/editors/space_image/image_ops.c b/source/blender/editors/space_image/image_ops.c index aed4a2ccabd..34fd9120674 100644 --- a/source/blender/editors/space_image/image_ops.c +++ b/source/blender/editors/space_image/image_ops.c @@ -3950,10 +3950,11 @@ static int tile_add_exec(bContext *C, wmOperator *op) return OPERATOR_CANCELLED; } ima->active_tile_index = BLI_findindex(&ima->tiles, last_tile_created); + BKE_image_partial_update_mark_full_update(ima); WM_event_add_notifier(C, NC_IMAGE | ND_DRAW, NULL); return OPERATOR_FINISHED; } static int tile_add_invoke(bContext *C, wmOperator *op, const wmEvent *UNUSED(event)) ``` ![step1.png](https://archive.blender.org/developer/F12893819/step1.png) ![step2.png](https://archive.blender.org/developer/F12893821/step2.png)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Issue revealed by the same commit- 507a4deef1
@Jeroen-Bakker , can you check?

Issue revealed by the same commit- 507a4deef1 @Jeroen-Bakker , can you check?
Member

Proposed patch is good.

Proposed patch is good.

This issue was referenced by 5086913b28

This issue was referenced by 5086913b28d2c0d66167e6945edf1207f540d9e2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2022-03-02 11:42:43 +01:00
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96116
No description provided.