Fix T96116: Image editor not updated when adding new tile.