source/blender/blenkernel/intern/image.c
@@ -3626,6 +3626,7 @@ static void image_free_tile(Image *ima, ImageTile *tile)
       }
     }
   }
+  BKE_image_partial_update_mark_full_update(ima);
 
   if (BKE_image_is_multiview(ima)) {
     const int totviews = BLI_listbase_count(&ima->views);
@@ -3966,6 +3967,7 @@ ImageTile *BKE_image_add_tile(struct Image *ima, int tile_number, const char *la
       }
     }
   }
+  BKE_image_partial_update_mark_full_update(ima);
 
   return tile;
 }
@@ -4031,6 +4033,7 @@ void BKE_image_reassign_tile(struct Image *ima, ImageTile *tile, int new_tile_nu
       }
     }
   }
+  BKE_image_partial_update_mark_full_update(ima);
 }
 
 static int tile_sort_cb(const void *a, const void *b)
